# pr-review-process

./: .coverage  .isort.cfg  README.md  ollama.py  prompt.txt  pyproject.toml
.ai/: architecture.md  business.md  conventions.md  domain.md  risks.md
src/: app.py  app.sh
tests/: test_hello.py
